--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "config": "^3.3.12",
     "fs-extra": "^11.2.0",
     "glob": "^11.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "terminal-kit": "^3.1.1"
   }
 }
