--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "fs-extra": "^11.2.0",
     "glob": "^11.0.0",
     "lodash": "^4.17.21",
-    "terminal-kit": "^3.1.1"
+    "prettier": "^3.3.3",
+    "terminal-kit": "^3.1.1",
+    "ws": "^8.18.0"
   }
 }
